# algorithms

./: .gitignore  README.md  pyproject.toml
src/pysort/: __init__.py  pysort.py
tests/: pysort.py
